# AgenticAI-IT

./: .dockerignore  .env.example  .env.example1  .gitignore  AI_Delivery_Lifecycle_Capabilities (1) (1).xlsx  AI_Delivery_Lifecycle_Capabilities.xlsx - Capability Catalogue.csv  CONTRIBUTING.md  Dockerfile  README.md  add_endpoint.py  add_redirection_release.py  add_redirection_release2.py  add_redirections.py  add_sidebar.py  add_tasks_endpoint.py  check.py  check_db.py  check_endpoints.py  data_contracts.md  data_contracts_stages_06_09.md  fix_api.py  fix_dropdowns.py  fix_layout_vars.py  fix_release_redirection.py  fix_viewport.py  fix_viewport_duplicate.py  fly.toml  gateway.py  inspect_db.py  practice.txt  probe_db.py  remove_ops_dashboard.py  remove_ops_gateway.py  render.yaml  requirements.txt  scratch.py  scratch_cleanup.py  test_all_modules.py  update_dropdowns.py  use_cases.md
services/plan-schedule/: .env.example  README.md  database.py  main.py  plan.db  pyproject.toml  requirements.txt  task.md
services/plan-schedule/fixtures/: plan_1.json  plan_2.json  plan_3.json
services/plan-schedule/output/: PLN-0001-1.json  PLN-0003-1.json
services/plan-schedule/plan_schedule/: __init__.py  __main__.py  buffer.py  cli.py  critical_path.py  models.py  planner.py  scheduler.py  wbs.py
services/plan-schedule/plan_schedule.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/plan-schedule/prompts/: planning_prompt.md
services/plan-schedule/schemas/: estimate_input.schema.json  plan_record.schema.json  team_config.schema.json  (+1 more)
(+271 files in other folders)
